--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 <!--Additional activity -->
 <span>
     <h3>Colour: </h3>
-<input type="text" id="colour">
+<input type="text" id="colour" value="red">
+
 </span>
 <span>
     <h3>Line Width: </h3>
-<input type="text" id="LineWidth">
+<input type="text" id="LineWidth" value="6">
 </span>
     </div>
 <script src="main.js"></script>
